<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tennis Tracker</string>
    <string name="tennis_n_tracker" translatable="false">Tennis\nTracker!</string>
    <string name="content" translatable="false">tennis ball</string>
    <string name="matchs_pr_c_dents">Matchs précédents</string>
    <string name="nouveau_match">Nouveau Match</string>
    <string name="nom_joueur_1">Nom Joueur 1</string>
    <string name="nom_joueur_2">Nom Joueur 2</string>
    <string name="firstPlayerName">Joueur 1</string>
    <string name="secondPlayerName">Joueur 2</string>
    <string name="format_du_match">Format du match</string>
    <string name="saisir_le_type_de_coup">Saisir le type de coup</string>
    <string name="format_du_dernier_set">Format du dernier set</string>
    <string name="startButton">Démarrer</string>
    <string name="score">SCORE</string>
    <string-array name="matchFormat">
        <item>2 sets, 6 jeux, Avantage ,TB 6–6</item>
        <item>2 sets, 5 jeux, Avantage ,TB 5–5</item>
        <item>2 sets, 4 jeux, Avantage ,TB 4–4</item>
        <item>2 sets, 5 jeux, Pas d\'avantage ,TB 4–4</item>
        <item>2 sets, 4 jeux, Pas d\'avantage ,TB 3–3</item>
        <item>2 sets, 3 jeux, Pas d\'avantage ,TB 2–2</item>
    </string-array>
    <string-array name="lastSetFormat">
        <item>Set normal</item>
        <item>Tie-break en 7 points</item>
        <item>Super Tie-break en 10 points</item>
    </string-array>
    <string name="finishButton">Finir</string>
    <string name="recordingActivityTitle">Enregistrement</string>
    <string name="voir_les_statistiques">Voir les statistiques</string>
    <string name="donner_un_point_joueur_1">Donner un point à Joueur 1</string>
    <string name="donner_un_point_joueur_2">Donner un point à Joueur 2</string>
    <string name="annuler_l_enregistrement">Annuler l\'enregistrement</string>
    <string name="winnerButton">Point gagnant</string>
    <string name="unforced_nerror">Faute provo.</string>
    <string name="forced_error">Faute directe</string>
    <string name="first_nserve">1ère balle</string>
    <string name="ace">Ace</string>
    <string name="second_nserve">2ème balle</string>
    <string name="double_nfault">Double fault</string>
    <string name="firstPlayerScore" translatable="false">0</string>
    <string name="secondplayerscore" translatable="false">0</string>
    <string name="serverLabel">"SERVICE : "</string>
    <string name="rally">ECHANGE</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="leavingRecordingWarningMessage">Êtes-vous sûr de vouloir arrêter l\'enregistrement? Toutes vos données
        seront perdues !
    </string>
    <string name="take_a_picture">Prenez une photo!</string>
    <string name="finish_the_match_without_winner">Le terminer sans déclarer de vainqueur</string>
    <string name="declare_player_2_as_winner">Déclarer Joueur 2 vainqueur</string>
    <string name="declare_player_1_as_winner">Déclarer Joueur 1 vainqueur</string>
    <string name="first_server">Premier service</string>
    <string name="game_not_over_message">Le match n\'est pas encore terminé. Que voulez-vous faire?</string>
    <string name="won_game">a remporté le match</string>
    <string name="general_statistics">Statistiques générales</string>
    <string name="won_rallies">Points gagnés</string>
    <string name="service_statistics">Statistiques de Service</string>
    <string name="aces">ACES</string>
    <string name="double_faults">DOUBLE FAULTS</string>
    <string name="points_won_on_own_1st_serve">Points gagnés sur 1ère balle</string>
    <string name="rally_statistics">Statistiques de points</string>
    <string name="winners">Points gagnants</string>
    <string name="unforced_errors">"Fautes provoquées "</string>
    <string name="forced_errors">Fautes directes</string>
    <string name="update_server_text">Le serveur va être changé. Que voulez-vous faire du jeu en cours ?</string>
    <string name="grant_it_to_player_1">Le donner au Joueur 1</string>
    <string name="grant_it_to_player_2">Le donner au Joueur 2</string>
    <string name="start_it_over">Le recommencer à zéro</string>
    <string name="history">Historique</string>
</resources>
