<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:text="@string/start_it_over"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonStartOver" android:textAllCaps="false"
            android:fontFamily="@font/montserrat" android:textAlignment="textStart"
            android:onClick="onUpdateServerButtonClick"/>
    <Button
            android:text="@string/grant_it_to_player_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonGrantToFP" android:textAllCaps="false"
            android:fontFamily="@font/montserrat" android:textAlignment="textStart"
            android:onClick="onUpdateServerButtonClick"/>
    <Button
            android:text="@string/grant_it_to_player_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonGrantToSP" android:textAllCaps="false"
            android:fontFamily="@font/montserrat" android:textAlignment="textStart"
            android:onClick="onUpdateServerButtonClick"/>
</LinearLayout>