<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonCancelRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_vertical|center"
        android:gravity="center|center_horizontal"
        android:onClick="gameNotOverButtons"
        android:padding="10dp"
        android:text="@string/annuler_l_enregistrement" />

    <Button
        android:id="@+id/buttonFinishWithoutWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_vertical|center"
        android:gravity="center|center_horizontal"
        android:onClick="gameNotOverButtons"
        android:padding="10dp"
        android:text="@string/finish_the_match_without_winner" />

    <Button
        android:id="@+id/buttonFPWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_vertical|center"
        android:gravity="center|center_horizontal"
        android:onClick="gameNotOverButtons"
        android:padding="10dp"
        android:text="@string/declare_player_1_as_winner" />

    <Button
        android:id="@+id/buttonSPWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_vertical|center"
        android:gravity="center|center_horizontal"
        android:onClick="gameNotOverButtons"
        android:padding="10dp"
        android:text="@string/declare_player_2_as_winner" />
</LinearLayout>