<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.HomeActivity">

    <ImageView
            android:src="@drawable/tennisball"
            android:layout_width="228dp"
            android:layout_height="0dp" android:id="@+id/imageView"
            android:contentDescription="@string/content"
            android:layout_marginBottom="9dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tennis_n_tracker"
            android:fontFamily="@font/montserrat" android:textSize="36sp"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="34dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/buttonNewMatch"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/matchs_pr_c_dents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonPreviousMatches"
            android:foregroundGravity="center"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@+id/buttonNewMatch" android:layout_marginEnd="102dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/buttonNewPicture"/>
    <Button
            android:text="@string/take_a_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonNewPicture"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="@+id/buttonPreviousMatches"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonPreviousMatches" android:layout_marginBottom="97dp"/>
    <Button
            android:text="@string/nouveau_match"
            android:layout_width="wrap_content"
            android:onClick="onClick"
            android:layout_height="wrap_content" android:id="@+id/buttonNewMatch"
            android:foregroundGravity="center"
            app:layout_constraintStart_toStartOf="@+id/buttonPreviousMatches"
            android:layout_marginStart="4dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="23dp" app:layout_constraintBottom_toTopOf="@+id/buttonPreviousMatches"/>

</androidx.constraintlayout.widget.ConstraintLayout>