<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.RecordingActivity" android:orientation="vertical" android:weightSum="3"
        android:theme="@style/AppTheme">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical">
        <TextView
                android:text="@string/score"
                android:layout_width="match_parent"
                android:layout_height="97dp" android:id="@+id/scoreLabel" android:layout_weight="1"
                android:gravity="center_vertical" android:textStyle="bold" android:paddingHorizontal="5dp"
                android:drawableBottom="@android:drawable/divider_horizontal_dark"
                android:fontFamily="@font/montserrat"/>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="161dp" android:layout_weight="1" android:weightSum="2">

            <TableRow android:layout_width="match_parent" android:layout_height="74dp"
                      android:layout_weight="1" android:padding="5dp">
                <TextView
                        android:text="TextView"
                        android:layout_column="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tabFirstName"
                        android:fontFamily="@font/montserrat"/>

            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:padding="5dp"
                      android:layout_weight="1">

                <TextView
                        android:text="TextView"
                        android:layout_column="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tabSecondName"
                        android:fontFamily="@font/montserrat"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="1">
            <TextView
                    android:text="SERVER :"
                    android:layout_width="0dp"
                    android:layout_height="70dp" android:id="@+id/serverLabel" android:layout_weight="1"
                    android:foregroundGravity="center_vertical" android:gravity="center_vertical"
                    android:textStyle="bold" android:fontFamily="@font/montserrat"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="139dp" android:weightSum="3" android:baselineAligned="false">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <Button
                        android:text="@string/first_nserve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="2"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:foregroundGravity="center" android:textAllCaps="false"
                        android:backgroundTint="#FFFFFF" android:fontFamily="@font/montserrat"/>
                <Button
                        android:text="@string/ace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button4" android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:foregroundGravity="center" android:textAllCaps="false"
                        android:backgroundTint="#FFFFFF" android:hapticFeedbackEnabled="false"
                        android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <Button
                        android:text="@string/second_nserve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button5" android:layout_weight="2"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:foregroundGravity="center" android:textAllCaps="false"
                        android:backgroundTint="#FFFFFF" android:fontFamily="@font/montserrat"/>
                <Button
                        android:text="@string/ace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button6" android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:foregroundGravity="center" android:textAllCaps="false"
                        android:backgroundTint="#FFFFFF" android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:backgroundTint="#FFFFFF">
                <Button
                        android:text="@string/double_nfault"
                        android:layout_width="wrap_content"
                        android:layout_height="111dp" android:id="@+id/button9"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:foregroundGravity="center" android:textAllCaps="false"
                        android:backgroundTint="#FFFFFF" android:fontFamily="@font/montserrat"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="72dp" android:layout_weight="1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/rallyLabel" android:layout_weight="1"
                    android:text="RALLY" android:gravity="center_vertical" android:textStyle="bold"
                    android:fontFamily="@font/montserrat"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        android:text="1"
                        android:layout_width="85dp"
                        android:layout_height="52dp" android:id="@+id/textView8" android:gravity="center"
                        android:textStyle="bold" android:fontFamily="@font/montserrat" android:layout_gravity="center"
                        android:backgroundTint="#3C3B3B"/>
                <TextView
                        android:text="2"
                        android:layout_width="85dp"
                        android:layout_height="48dp" android:id="@+id/textView9" android:gravity="center"
                        android:textStyle="bold" android:fontFamily="@font/montserrat" android:layout_gravity="center"
                />
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <Button
                        android:text="@string/winnerButton"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/button10"
                        android:backgroundTint="#FFFFFF" android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"/>
                <Button
                        android:text="@string/winnerButton"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/button11"
                        android:backgroundTint="#FFFFFF" android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <Button
                        android:text="@string/unforced_nerror"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/button12"
                        android:backgroundTint="#FFFFFF" android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"/>
                <Button
                        android:text="@string/unforced_nerror"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/button13"
                        android:backgroundTint="#FFFFFF" android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <Button
                        android:text="@string/forced_error"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/button14"
                        android:backgroundTint="#FFFFFF" android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"/>
                <Button
                        android:text="@string/forced_error"
                        android:gravity="center|center_horizontal|center_vertical" android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/button15"
                        android:backgroundTint="#FFFFFF" android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>